:sparkles: Changes to the editor UI

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4957,3 +4957,6 @@ msgstr "Marketing"
 #: src/app/main/ui/onboarding/questions.cljs
 msgid "questions.student-teacher"
 msgstr "Student or teacher"
+
+msgid "workspace.layout_grid.editor.title"
+msgstr "Editing grid"
