--- a/frontend/translations/fa.po
+++ b/frontend/translations/fa.po
@@ -2575,19 +2575,19 @@ msgstr "تراز پایین"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 #, fuzzy
-msgid "workspace.options.text-options.align-center"
-msgstr "تراز در مرکز"
+msgid "workspace.options.text-options.text-align-center"
+msgstr "تراز در مرکز (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-left"
+msgid "workspace.options.text-options.text-align-left"
 msgstr "تراز چپ (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 msgid "workspace.options.text-options.align-middle"
-msgstr "تراز وسط (%s)"
+msgstr "تراز وسط"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-right"
+msgid "workspace.options.text-options.text-align-right"
 msgstr "تراز راست (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
