--- a/frontend/translations/hr.po
+++ b/frontend/translations/hr.po
@@ -3807,24 +3807,24 @@ msgid "workspace.options.text-options.align-bottom"
 msgstr "Poravnaj dno"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-center"
-msgstr "Poravnaj sredinu"
+msgid "workspace.options.text-options.text-align-center"
+msgstr "Poravnaj sredinu (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 #, fuzzy
-msgid "workspace.options.text-options.align-justify"
+msgid "workspace.options.text-options.text-align-justify"
 msgstr "Složi u blok (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-left"
+msgid "workspace.options.text-options.text-align-left"
 msgstr "Poravnaj lijevo (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 msgid "workspace.options.text-options.align-middle"
-msgstr "Poravnaj sredinu (%s)"
+msgstr "Poravnaj sredinu"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-right"
+msgid "workspace.options.text-options.text-align-right"
 msgstr "Poravnaj desno (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
