--- a/frontend/translations/pt_BR.po
+++ b/frontend/translations/pt_BR.po
@@ -3943,23 +3943,23 @@ msgid "workspace.options.text-options.align-bottom"
 msgstr "Alinhar a base"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-center"
-msgstr "Alinhar ao centro"
+msgid "workspace.options.text-options.text-align-center"
+msgstr "Alinhar ao centro (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-justify"
+msgid "workspace.options.text-options.text-align-justify"
 msgstr "Justificar (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-left"
+msgid "workspace.options.text-options.text-align-left"
 msgstr "Alinhar a esquerda (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 msgid "workspace.options.text-options.align-middle"
-msgstr "Alinhar no meio (%s)"
+msgstr "Alinhar no meio"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-right"
+msgid "workspace.options.text-options.text-align-right"
 msgstr "Alinhar a direita (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
