--- a/frontend/translations/tr.po
+++ b/frontend/translations/tr.po
@@ -4120,23 +4120,23 @@ msgid "workspace.options.text-options.align-bottom"
 msgstr "Alta hizala"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-center"
-msgstr "Ortaya hizala"
+msgid "workspace.options.text-options.text-align-center"
+msgstr "Ortaya hizala (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-justify"
+msgid "workspace.options.text-options.text-align-justify"
 msgstr "İki yana yasla (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-left"
+msgid "workspace.options.text-options.text-align-left"
 msgstr "Sola hizala (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
 msgid "workspace.options.text-options.align-middle"
-msgstr "Merkeze hizala (%s)"
+msgstr "Merkeze hizala"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
-msgid "workspace.options.text-options.align-right"
+msgid "workspace.options.text-options.text-align-right"
 msgstr "Sağa hizala (%s)"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/text.cljs
