--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -113,6 +113,10 @@ msgstr "Password"
 msgid "auth.password-length-hint"
 msgstr "At least 8 characters"
 
+#: src/app/main/ui/auth/register.cljs
+msgid "auth.password-not-empty"
+msgstr "Password must contain some character other than space."
+
 msgid "auth.privacy-policy"
 msgstr "Privacy policy"
 
@@ -370,6 +374,10 @@ msgstr "180 days"
 #: src/app/main/ui/settings/access-tokens.cljs
 msgid "dashboard.access-tokens.errors-required-name"
 msgstr "The name is required"
+
+#: src/app/main/ui/settings/team-form.cljs
+msgid "dashboard.team-name.not-empty-name"
+msgstr "The name must contain some character other than space."
 
 #: src/app/main/ui/settings/access-tokens.cljs
 msgid "dashboard.access-tokens.token-will-expire"
