--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -118,6 +118,10 @@ msgstr "Contraseña"
 msgid "auth.password-length-hint"
 msgstr "8 caracteres como mínimo"
 
+#: src/app/main/ui/auth/register.cljs
+msgid "auth.password-not-empty"
+msgstr "La contraseña debe contener algún caracter diferente de espacio"
+
 msgid "auth.privacy-policy"
 msgstr "Política de privacidad"
 
@@ -377,6 +381,10 @@ msgstr "180 días"
 #: src/app/main/ui/settings/access-tokens.cljs
 msgid "dashboard.access-tokens.errors-required-name"
 msgstr "El nombre es obligatorio"
+
+#: src/app/main/ui/settings/team-form.cljs
+msgid "dashboard.team-name.not-empty-name"
+msgstr "El nombre debe contener algún carácter diferente de espacio"
 
 #: src/app/main/ui/settings/access-tokens.cljs
 msgid "dashboard.access-tokens.token-will-expire"
